package cn.org.wyxxt.abstractfactory;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 3:10 下午
 * @email jsjxzw@163.com
 */
public class AK47 extends Weapon {
    public void shoot() {
        System.out.println("tututu...");
    }
}
