package cn.org.wyxxt.abstractfactory;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 3:16 下午
 * @email jsjxzw@163.com
 */
public class Broom extends Vehicle {
    @Override
    void go() {
        System.out.println("Broom go shuashuashua...");
    }
}
