package cn.org.wyxxt.abstractfactory;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 11:58 上午
 * @email jsjxzw@163.com
 */
public class Car extends Vehicle {

    public void go() {
        System.out.println("Car go wuwuwu...");
    }
}
