package cn.org.wyxxt.abstractfactory;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 3:16 下午
 * @email jsjxzw@163.com
 */
public class MushRoom extends Food {
    public void printName() {
        System.out.println("dmg");
    }
}
