package cn.org.wyxxt.abstractfactory;

/**
 * @author xingzhiwei
 * @createBy IntelliJ IDEA
 * @time 2021/2/24 5:11 下午
 * @email jsjxzw@163.com
 */
public abstract class Weapon {
    abstract void shoot();
}
